fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
     font-weight: 400%;
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    overflow: scroll;
 }
 h3 {
     text-transform: uppercase;
